tests/negative/main_void_return.ax
module main_void_return;

fn main() -> void {
    return;
}
